@@ -1,0 +1,1 @@
+<p>Monsters on map: 
