@@ -1,0 +1,1 @@
+<p>No monster on this map.</p>
